--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,29 +3,22 @@
 :root {
   --background: #ffffff;
   --foreground: #092a44;
-  --font-montserrat: 'Montserrat', sans-serif;
-  --font-figtree: 'Figtree', sans-serif;
+  --font-dm-sans: 'DM Sans', sans-serif;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #ffffff;
     --foreground: #092a44;
-    --font-montserrat: 'Montserrat', sans-serif;
-    --font-figtree: 'Figtree', sans-serif;
+    --font-dm-sans: 'DM Sans', sans-serif;
   }
 }
 
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: var(--font-montserrat);
+  font-family: var(--font-dm-sans);
 }
-
-h1, h2 {
-  font-family: var(--font-figtree);
-}
-
 
 .slick-next::before {
   color: #155dfc !important;
