--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@plugin "@tailwindcss/typography";
 
 :root {
   --background: #ffffff;
@@ -38,19 +39,4 @@ body {
 .slick-slide:not(.slick-active) {
   visibility: hidden !important;
   pointer-events: none !important;
-}
-
-@layer base {
-  h1 {
-    @apply text-4xl font-bold;
-  }
-
-  h2 {
-    @apply text-3xl font-semibold;
-  }
-
-  h3 {
-    @apply text-2xl font-medium;
-  }
-
 }
