feat: change globals.css

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,7 +35,7 @@ body {
   overflow: hidden !important;
 } */
 
- /* If you need smooth carousel hide below style */
+ /* If you need smooth carousel for packagePrices hide below style */
 .slick-slide:not(.slick-active) {
   visibility: hidden !important;
   pointer-events: none !important;
